--- a/pages/buscar.html
+++ b/pages/buscar.html
@@ -211,7 +211,7 @@
 
                 let row = '<div class="col mb-4 wow animate__animated animate__fadeInUp">' +
                             '<a href="#" onclick="mostrarAlerta(' + data.data[i].idAnimal + ', ' + data.data[i].idUsuario + '); return false;">' +
-                                '<div class="card card9">' +
+                                '<div class="card card9" style="background-image:url(' + data.data[i].foto + ')">' +
                                     '<div class="cardHead">' +
                                         '<div class="cardHead__title">' +
                                             '<h5 class="card-title">' + data.data[i].nombre + '</h5>' +
