--- a/pages/buscar.html
+++ b/pages/buscar.html
@@ -32,17 +32,20 @@
                     <li class="nav-item active">
                       <a class="nav-link" href="buscar.html">Buscar<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                       <a class="nav-link" href="historial.html">Historial</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item " id="borrar1">
                       <a class="nav-link" href="albergues.html">Albergue</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
+                      <a class="nav-link" href="buscar_albergue.html">Buscar Albergue</a>
+                    </li>
+                    <li class="nav-item " id="borrar2">
                       <a class="nav-link" href="categoria.html">Categorias<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                      <a class="nav-link" href="user/mis_publicaciones.html">Mis publicaciones<span class="sr-only">(current)</span></a>
+                    <li class="nav-item ">
+                      <a class="nav-link" href="user/mis_publicaciones.html">Mis publicaciones</a>
                     </li>
                     <li class="nav-item" id="cambio">
                       <a class="nav-link" href="login.html">Login</a>
@@ -182,6 +185,15 @@
         }else {
           document.getElementById("cambio").innerHTML = '<a class="nav-link" href="login.html">Cerrar Sesion</a>';
         }
+        if(localStorage.getItem('clave') != 1) {
+          document.getElementById("borrar1").innerHTML = ''
+          document.getElementById("borrar2").innerHTML = ''
+        }
+        if(localStorage.getItem('token') == null || localStorage.getItem('token') == "") {
+          document.getElementById("cambio").innerHTML = '<a class="nav-link" href="pages/login.html">Login</a>';
+        }else {
+          document.getElementById("cambio").innerHTML = '<a class="nav-link" href="login.html">Cerrar Sesion</a>';
+        }
       });
       function BuscarFiltro() {
         console.log("Entro");
@@ -274,7 +286,7 @@
               console.log('Categorías:', data.data);
               let contenido = '<option value="0">Seleccione Dueño</option>';
               for(let i = 0; i < data.data.length; i++) {
-                let fila = '<option value="'+data.data[i].idPersona+'">'+data.data[i].nombre + data.data[i].apellido+ '</option>';  
+                let fila = '<option value="'+data.data[i].idPersona+'">'+data.data[i].nombre + " - " +  data.data[i].apellido+ '</option>';  
                     contenido = contenido + fila;
               }   
               document.getElementById("persona").innerHTML = contenido;
