--- a/pages/historial.html
+++ b/pages/historial.html
@@ -39,20 +39,23 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="buscar.html">Buscar<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="buscar.html">Buscar</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="historial.html">Historial</a>
+                  <a class="nav-link" href="historial.html">Historial<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item " id="borrar1">
                   <a class="nav-link" href="albergues.html">Albergue</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="categoria.html">Categorias<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="buscar_albergue.html">Buscar Albergue</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="user/mis_publicaciones.html">Mis publicaciones<span class="sr-only">(current)</span></a>
+                <li class="nav-item" id="borrar2">
+                  <a class="nav-link" href="categoria.html">Categorias</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="user/mis_publicaciones.html">Mis publicaciones</a>
                 </li>
                 <li class="nav-item" id="cambio">
                   <a class="nav-link" href="login.html">Login</a>
@@ -193,6 +196,15 @@
         let idUsuario = localStorage.getItem('clave');
         ListarAdopciones(idUsuario);
         ListarMisMascotas(idUsuario);
+        if(localStorage.getItem('clave') != 1) {
+          document.getElementById("borrar1").innerHTML = ''
+          document.getElementById("borrar2").innerHTML = ''
+        }
+        if(localStorage.getItem('token') == null || localStorage.getItem('token') == "") {
+          document.getElementById("cambio").innerHTML = '<a class="nav-link" href="pages/login.html">Login</a>';
+        }else {
+          document.getElementById("cambio").innerHTML = '<a class="nav-link" href="login.html">Cerrar Sesion</a>';
+        }
       });
       function ListarAdopciones(id) {
         const url = 'https://apimascota.azurewebsites.net/Adoptados/' + id;
