--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -139,7 +139,7 @@
                 .then(data => {
                     console.log(data);
                     alert('Registro completado con éxito');
-                    window.location.href = '../index.html';
+                    window.location.href = 'login.html';
                 })
                 .catch((error) => {
                     alert('Error al realizar el registro');
